Reduce font-size of contact-form-text to avoid horizontal overflow

--- a/style.css
+++ b/style.css
@@ -525,7 +525,7 @@ h1,
   width: 90%;
   height: 40%;
   font-weight: 700;
-  font-size: 25px;
+  font-size: 20px;
   line-height: 35px;
   color: #172b4d;
   display: block;
